vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: vault-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sops-vault.orlandotorres.dev
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.orlandotorres.dev'
